[package]
name = "rdb"
version = "0.1.0"
authors = ["BojanStipic <bojanstipic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.7.0"
gtk = { version = "0.7.0", features = ["v3_24"] }
sourceview = { version = "0.7.0", features = ["v3_24"] }
